Feat: 관리자 서비스 기능 구현 및 인증 필터 수정 - 관리자: 공지사항 관련 기능 추가 - 관리자: 페널티 부여 추가 - 관리자: 신고 기능 추가 - 관리자: 문의사항 기능 추가 - 게이트웨이: 기존 인증 API 제거 - 인증 서버: 기존 인증 API Migration